--- a/src/home.css
+++ b/src/home.css
@@ -6,7 +6,7 @@ body{
 }
 #app{
     max-width: 600px;
-    background: #000;
-    color: #fff;
+    /* background: #000; */
+    /* color: #fff; */
     margin: 0 auto;
 }
